Contact Page created. See the READ.ME for more details.

--- a/djangoweb/products/templates/products/index.html
+++ b/djangoweb/products/templates/products/index.html
@@ -1,8 +1,11 @@
 {% extends "website/base.html" %}
 
 {% block content %}
-    <h6>PRODUCTS HERE</h6>
-    <h6>PRODUCTS HERE</h6>
-    <h6>PRODUCTS HERE</h6>
-    <h6>PRODUCTS HERE</h6>
+    <section class="temporary-section">
+
+        <div class="temporary-container">
+            <h1>Página em construção</h1>
+        </div>
+
+    </section>
 {% endblock content %}
