--- a/djangoweb/website/templates/website/pages/who_we_are.html
+++ b/djangoweb/website/templates/website/pages/who_we_are.html
@@ -1,9 +1,11 @@
 {% extends "website/base.html" %}
 
 {% block content %}
-    <h1>WHO WE ARE</h1>
-    <h1>WHO WE ARE</h1>
-    <h1>WHO WE ARE</h1>
-    <h1>WHO WE ARE</h1>
-    <h1>WHO WE ARE</h1>
+    <section class="success-section">
+
+        <div class="success-container">
+            <h1>Página em construção</h1>
+        </div>
+
+    </section>
 {% endblock content %}
