Fixing the sentence on the success page.

--- a/djangoweb/website/templates/website/pages/success_form.html
+++ b/djangoweb/website/templates/website/pages/success_form.html
@@ -6,7 +6,7 @@
 
         <div class="success-container">
             <h1>Mensagem enviada com sucesso!</h1>
-            <p>Obrigado por entrar em contacto. Responderemos o mais breve possível.</p>
+            <p>Obrigado por entrar em contato. Responderemos o mais breve possível.</p>
             <a href="{% url 'website:home' %}" class="success-button">
                 Voltar ao início
             </a>
