Adjusting the Who We Are page.

--- a/djangoweb/website/static/website/css/style.css
+++ b/djangoweb/website/static/website/css/style.css
@@ -1471,6 +1471,7 @@ a {
     .about-page {
         padding: 2rem 1.5rem;
         font-size: 1rem;
+        margin-top: 10rem;
     }
 
     .about-page h1 {
