Creating a new model to setup the product index page and organizing the folders dynamically to receive the images of their respective models & Creating the index.html and CSS.

--- a/djangoweb/products/templates/products/index.html
+++ b/djangoweb/products/templates/products/index.html
@@ -1,11 +1,32 @@
 {% extends "website/base.html" %}
 
 {% block content %}
-    <section class="temporary-section">
+    <section class="hero">
 
-        <div class="temporary-container">
-            <h1>Página em construção</h1>
+        <div class="hero-content">
+            <h1>Encontre o produto ideal para o seu projeto</h1>
+            <p>Qualidade, design e funcionalidade reunidos em um só lugar.</p>
+            <a href="#categories-id" class="btn-primary">Ver Produtos</a>
         </div>
 
+    </section>
+
+    <section id="categories-id" class="categories">
+        <h2>Categorias</h2>
+        <div class="categories-grid">
+
+            {% for category in categories %}
+                <a href="{% url "products:product-list" category.name %}" class="category-card">
+
+                    <div class="card-image">
+                        <img src="{{ category.image.url }}" alt="{{ category.name }}">
+                    </div>
+                    <div class="card-content">
+                        <h3>{{ category.name }}</h3>
+                    </div>
+
+                </a>
+            {% endfor %}
+        </div>
     </section>
 {% endblock content %}
