--- a/djangoweb/website/templates/website/partials/_footer.html
+++ b/djangoweb/website/templates/website/partials/_footer.html
@@ -32,14 +32,14 @@
                     <!--INSTAGRAM-->
                     <a href="{{ contact.instagram_url }}" 
                     target="_blank" 
-                    aria-label="Instagram">
+                    aria-label="Instagram" title="Instagram">
                         <i class="fab fa-instagram"></i>
                     </a>
                 
 
                     <!--FACEBOOK-->
                     <a href="{{ contact.facebook_url }}" 
-                    target="_blank" aria-label="Facebook">
+                    target="_blank" aria-label="Facebook" title="Facebook">
                         <i class="fab fa-facebook-f"></i>
 
                     </a>
