--- a/djangoweb/website/templates/website/partials/_header.html
+++ b/djangoweb/website/templates/website/partials/_header.html
@@ -45,10 +45,13 @@
         <!-- SOCIAL MEDIA MOBILE -->
 
         <div class="header-socials">
-            <a href="https://www.instagram.com/gazilequipamentos?igsh=MXhmamZ5ZmdhYjc1aA%3D%3D&utm_source=qr" target="_blank" aria-label="Instagram">
+            <!-- Instagram -->
+            <a href="https://www.instagram.com/gazilequipamentos?igsh=MXhmamZ5ZmdhYjc1aA%3D%3D&utm_source=qr" target="_blank" aria-label="Instagram" title="Instagram">
                 <i class="fab fa-instagram"></i>
             </a>
-            <a href="https://www.facebook.com/share/1FqVLHRSGZ/?mibextid=wwXIfr" target="_blank" aria-label="Facebook">
+
+            <!-- Facebook -->
+            <a href="https://www.facebook.com/share/1FqVLHRSGZ/?mibextid=wwXIfr" target="_blank" aria-label="Facebook" title="Facebook">
                 <i class="fab fa-facebook-f"></i>
             </a>
         </div>
