--- a/djangoweb/website/templates/website/partials/_whatsapp.html
+++ b/djangoweb/website/templates/website/partials/_whatsapp.html
@@ -4,7 +4,8 @@
         <a href="http://wa.me/{{ site_setup.whatsapp_number }}?text="
         target="_blank"
         rel="noopener noreferrer"
-        aria-label="Fale conosco no Whatsapp">
+        aria-label="Fale conosco no Whatsapp"
+        title="Contactar Via Whatsapp">
             <img src="{{ site_setup.whatsapp_icon.url }}" alt="Whatsapp">
 
         </a>
