--- a/djangoweb/products/templates/products/detail_product.html
+++ b/djangoweb/products/templates/products/detail_product.html
@@ -1,6 +1,10 @@
 {% extends 'website/base.html' %}
 
 {% block content %}
+
+    {% include "website/partials/_hero-content.html" %}
+
+
 <div class="max-w-4xl mx-auto p-6">
     <div class="grid md:grid-cols-2 gap-8 items-start">
         <!-- Imagem do produto -->
