--- a/djangoweb/products/templates/products/index.html
+++ b/djangoweb/products/templates/products/index.html
@@ -1,32 +1,9 @@
 {% extends "website/base.html" %}
 
 {% block content %}
-    <section class="hero">
+    {% include "website/partials/_hero-content.html" %}
 
-        <div class="hero-content">
-            <h1>Encontre o produto ideal para o seu projeto</h1>
-            <p>Qualidade, design e funcionalidade reunidos em um só lugar.</p>
-        </div>
-
-        <form class="search-bar" action="#" method="get" title="Pesquisar">
-
-            <input type="text" name="q" placeholder="Pesquisar produtos..." />
-            <button type="submit">
-                <svg xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 24 24" 
-                    width="22" height="22"
-                    fill="currentColor">
-
-                    <path d="M10 2a8 8 0 015.293 13.707l4 4a1 1 0 01-1.414 1.414l-4-4A8 8 0 1110 2zm0 2a6 6 0 100 12 6 6 0 000-12z"/>
-                </svg>
-
-            </button>
-
-        </form>
-
-    </section>
-
-     <section class="categories">
+    <section class="categories">
         <h2 class="categories-title">Nossas Linhas de Produtos</h2>
         <p class="categories-subtitle">Encontre a categoria certa para o seu projeto</p>
         <div class="categories-grid">
