--- a/djangoweb/products/templates/products/list_products.html
+++ b/djangoweb/products/templates/products/list_products.html
@@ -1,6 +1,10 @@
 {% extends "website/base.html" %}
 
 {% block content %}
+
+    {% include "website/partials/_hero-content.html" %}
+
+
 <h1 class="text-3xl font-bold mb-6">Bancadas</h1>
 
 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
