--- a/djangoweb/website/static/website/css/style.css
+++ b/djangoweb/website/static/website/css/style.css
@@ -1652,6 +1652,88 @@ a {
 }
 
 
+/* ================== LIST PRODUCTS TEMPLATE =================== */
+
+.content {
+    background: var(--color-white);
+}
+
+.ordering {
+    margin-bottom: 20px;
+    text-align: right;
+}
+
+.ordering select {
+    padding: 6px 10px;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    font-size: 0.75rem;
+}
+
+.product-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 20px;
+}
+
+.product-card {
+    background: var(--color-white);
+    border-radius: 10px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    padding: 15px;
+    text-align: center;
+    transition: transform 0.3s ease;
+}
+
+.product-card:hover{
+    transform: translateY(-5px);
+}
+
+.product-card img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 6px;
+    margin-bottom: 10px;
+}
+
+.product-card h3 {
+    font-size: 1.1rem;
+    margin-bottom: 8px;
+    font-weight: 600;
+}
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+    margin-top: 30px;
+    flex-wrap: wrap;
+}
+
+.pagination a{
+    text-decoration: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    color: var(--color-light-dark);
+    transition: background 0.2s ease;
+}
+
+.pagination a:hover {
+    background: var(--color-primary);
+    color: var(--color-white);
+}
+
+.pagination span {
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    background: var(--color-light);
+}
+
+
 
 /* ###### SECTION TEMPORÁRIA ###### */
 .temporary-section{
