--- a/djangoweb/website/static/website/css/style.css
+++ b/djangoweb/website/static/website/css/style.css
@@ -1659,7 +1659,7 @@ a {
 }
 
 .ordering {
-    margin-bottom: 20px;
+    padding: 1.5rem 0;
     text-align: right;
 }
 
@@ -1674,6 +1674,7 @@ a {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     gap: 20px;
+    padding-bottom: 3rem;
 }
 
 .product-card {
@@ -1710,6 +1711,7 @@ a {
     gap: 12px;
     margin-top: 30px;
     flex-wrap: wrap;
+    padding-bottom: 0.95rem;
 }
 
 .pagination a{
