--- a/djangoweb/website/static/website/css/style.css
+++ b/djangoweb/website/static/website/css/style.css
@@ -1399,7 +1399,6 @@ a {
     opacity: 0.8;
 }
 
-
 .about-page {
     padding: 4rem 2rem;
     max-width: 960px;
@@ -1693,15 +1692,14 @@ a {
 
 .product-card img {
     width: 100%;
-    height: 200px;
+    height: 300px;
     object-fit: cover;
     border-radius: 6px;
-    margin-bottom: 10px;
 }
 
 .product-card h3 {
-    font-size: 1.1rem;
-    margin-bottom: 8px;
+    font-size: 1.25rem;
+    margin: 0;
     font-weight: 600;
 }
 
