--- a/djangoweb/website/static/website/css/style.css
+++ b/djangoweb/website/static/website/css/style.css
@@ -1457,7 +1457,7 @@ a {
 }
 
 .about-page blockquote {
-    background-color: var(--color-light);
+    background-color: var(--color-white);
     border-left: 4px solid var(--color-secondary);
     padding: 1rem 1.25rem;
     margin-bottom: 1.5rem;
