--- a/djangoweb/products/templates/products/list_products.html
+++ b/djangoweb/products/templates/products/list_products.html
@@ -1,4 +1,5 @@
 {% extends "website/base.html" %}
+{% load custom_filters %}
 
 {% block content %}
 
@@ -6,7 +7,7 @@
 
     <div class="content">
 
-        <div class="container">
+        <div class="container list-product">
 
             <!-- ORDERING -->
             <div class="ordering">
@@ -27,12 +28,44 @@
 
                 {% for product in products %}
 
-                    <a href="{% url "products:product-detail" slug_category product.slug_product %}">
-                        <div class="product-card">
+                    <div class="product-list-card">
+                        <div class="card-product-image">
                             <img src="{{ product.image.url }}" alt="{{ product.name }}">
-                            <h3>{{ product.name }}</h3>            
                         </div>
-                    </a>
+
+                        <div class="card-product-content">
+                            <h2>{{ product.name }}</h2>
+                            <p class="short-desc">{{ product.short_description }}</p>
+
+                            <div class="card-product-actions">
+                                <a href="http://wa.me/{{ site_setup.whatsapp_number }}?text={{ product|whatsapp_product_message:request }}"
+                                class="btn btn-whatsapp"
+                                target="_blank">
+
+                                    <i class="fab fa-whatsapp"></i>
+                                
+                                    Pedir preço via Whatsapp
+                                </a>
+
+                                <form action="#" method="post">
+                                    {% csrf_token %}
+                                    <button type="submit" class="btn btn-cart">
+
+                                        <i class="fas fa-shopping-cart"></i>
+
+                                        Adicionar ao carrinho
+                                    </button>
+                                </form>
+
+                                <a href={% url "products:product-detail" slug_category product.slug_product %} class="btn btn-details">
+
+                                    <i class="fas fa-info-circle"></i>
+                                    Ver mais detalhes
+                                </a>
+                            </div>
+                        </div>
+
+                    </div>
 
                 {% empty %}
 
