--- a/djangoweb/website/static/website/css/style.css
+++ b/djangoweb/website/static/website/css/style.css
@@ -1658,6 +1658,10 @@ a {
     background: var(--color-white);
 }
 
+.list-product {
+    max-width: 1300px;
+}
+
 .ordering {
     padding: 1.5rem 0;
     text-align: right;
@@ -1672,35 +1676,115 @@ a {
 
 .product-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    gap: 20px;
-    padding-bottom: 3rem;
+    grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));
+    gap: 24px;
 }
 
-.product-card {
+.product-list-card {
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
     background: var(--color-white);
-    border-radius: 10px;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-    padding: 15px;
-    text-align: center;
-    transition: transform 0.3s ease;
+    margin-bottom: 1.5rem;
+    transition: box-shadow 0.3s ease-in-out;
 }
 
-.product-card:hover{
-    transform: translateY(-5px);
+.card-product-image {
+    flex: 1;
+    min-width: 60%;
+    max-width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #f9f9f9;
 }
 
-.product-card img {
+.card-product-image img {
     width: 100%;
-    height: 300px;
+    height: auto;
+    border-radius: 8px;
     object-fit: cover;
-    border-radius: 6px;
 }
 
-.product-card h3 {
-    font-size: 1.25rem;
-    margin: 0;
-    font-weight: 600;
+.card-product-content{
+    padding: 15px;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.card-product-content h2 {
+    font-size: 1.15rem;
+    margin-bottom: 0.5rem;
+    color: var(--color-primary);
+}
+
+.card-product-content .short-desc {
+    font-size: 1.1rem;
+    color: var(--color-dark-gray);
+    flex-grow: 1;
+}
+
+.card-product-actions {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 6px;
+    text-align: center;
+    padding: 10px;
+    border-radius: 40px;
+    font-size: 14px;
+    font-weight: bold;
+    cursor: pointer;
+    text-decoration: none;
+    transition: 0.3s ease;
+}
+
+.icon-list-product-whatsapp {
+    width: 18px;
+    height: 18px;
+    margin-right: 6px;
+    vertical-align: middle;
+}
+
+.btn-whatsapp {
+    background: var(--color-whatsapp);
+    color: var(--color-white);
+}
+
+.btn-whatsapp:hover {
+    background: var(--color-hover-whatsapp);
+}
+
+.btn-cart {
+    background: var(--color-primary);
+    color: var(--color-white);
+    border: none;
+    width: 100%;
+}
+
+.btn-cart:hover{
+    background: var(--color-primary-dark);
+}
+
+.btn-details {
+    background: var(--color-light);
+    color: var(--color-light-dark);
+}
+
+.btn-details:hover {
+    background: #ddd;
+}
+
+.btn i  {
+    font-size: 20px;
 }
 
 .pagination {
@@ -1733,6 +1817,20 @@ a {
     border-radius: 6px;
     background: var(--color-light);
 }
+
+
+/* ========== RESPONSIVINESS LIST_PRODUCT TEMPLATE ========== */
+
+@media (max-width: 768px) {
+    .product-card {
+        flex-direction: column;
+    }
+
+    .card-image {
+        max-width: 100%;
+    }
+}
+
 
 
 
