--- a/djangoweb/website/static/website/css/style.css
+++ b/djangoweb/website/static/website/css/style.css
@@ -1676,6 +1676,11 @@ a {
     font-size: 0.75rem;
 }
 
+.list-title h2 {
+    text-align: center;
+    font-size: 2.5rem;
+}
+
 .product-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));
